add full page without buttons and owl

--- a/project/index.html
+++ b/project/index.html
@@ -26,20 +26,339 @@
 	<meta property="og:url" content="" />
 	<meta property="og:image" content="" />
 	<!-- css -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
-	<header>
-		
+	<header class="header">
+		<div class="header-wrapper">
+			<nav class="header-navigation">
+				<div class="header-item">
+					<div class="header-logo">
+						<a href="#"><img src="img/logotype.svg" alt=""></a>
+					</div>
+					<div class="header-language">
+						<div class="header-separator"></div>
+						<a href="#" class="header-link">En</a>
+					</div>
+				</div>
+				<div class="header-item header-item-buttons">
+					<div class="header-sign-wrapper">
+						<a href="#" class="header-sign">Sign up</a>
+					</div>
+					<div class="header-login-wrapper">
+						<a href="#" class="header-login">Login</a>
+					</div>
+				</div>
+			</nav>
+			<div class="header-body">
+				<h1 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">2 best in class products:</h1>
+				<p class="header-subtitle wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">Cfd broker & automated trading</p>
+				<div class="header-images">
+					<img class="header-image header-image-first wow fadeInUp" data-wow-duration="1.7s" data-wow-delay=".1s" src="img/header-photo-1.png" alt="">
+					<img class="header-image header-image-second wow fadeInUp" data-wow-duration="1.7s" data-wow-delay=".3s" src="img/header-photo-2.png" alt="">
+				</div>
+			</div>
+		</div>
 	</header>
 
-	<footer>	
+	<div class="clients">
+		<div class="wrapper">
+			<div class="clients-wrapper">
+				<div class="clients-title title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">
+					Why your clients <br> trade with:
+				</div>
+				<div class="clients-items">
+					<div class="clients-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".1s">
+						<div class="clients-subtitle">
+							Daxbase
+						</div>
+						<div class="clients-pluses">
+							<div class="clients-plus">
+								<div class="clients-number">1</div>
+								<div class="clients-body">
+									<h3 class="clients-plus-top">100+ Trading Assets</h3>
+									<p class="clients-plus-bottom">Forex | CFD | Stocks | Crypto</p>
+								</div>
+							</div>
 
+							<div class="clients-plus">
+								<div class="clients-number">2</div>
+								<div class="clients-body">
+									<h3 class="clients-plus-top">1:500 Leverage</h3>
+									<p class="clients-plus-bottom">Leverage from 1:3 with up to 1:500</p>
+								</div>
+							</div>
+
+							<div class="clients-plus">
+								<div class="clients-number">3</div>
+								<div class="clients-body">
+									<h3 class="clients-plus-top">100+ Trading Assets</h3>
+									<p class="clients-plus-bottom">Forex | CFD | Stocks | Crypto</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="clients-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">
+							<div class="clients-subtitle">
+								Daxrobot
+							</div>
+							<div class="clients-pluses">
+								<div class="clients-plus">
+									<div class="clients-number">1</div>
+									<div class="clients-body">
+										<h3 class="clients-plus-top">100+ Trading Assets</h3>
+										<p class="clients-plus-bottom">Forex | CFD | Stocks | Crypto</p>
+									</div>
+								</div>
+	
+								<div class="clients-plus">
+									<div class="clients-number">2</div>
+									<div class="clients-body">
+										<h3 class="clients-plus-top">1:500 Leverage</h3>
+										<p class="clients-plus-bottom">Leverage from 1:3 with up to 1:500</p>
+									</div>
+								</div>
+	
+								<div class="clients-plus">
+									<div class="clients-number">3</div>
+									<div class="clients-body">
+										<h3 class="clients-plus-top">100+ Trading Assets</h3>
+										<p class="clients-plus-bottom">Forex | CFD | Stocks | Crypto</p>
+									</div>
+								</div>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="partner">
+		<div class="wrapper">
+			<div class="partner-wrapper">
+				<div class="partner-top">
+					<h2 class="title partner-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">Why partner <br> with <span>daxbase?</span></h2>
+					<p class="partner-note wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".4s">
+						*No  additional rules. Refer the client, let him deposit,receive the payout! You will get 60% from the client’s first deposit and 20% from  all next deposits. Lifetime!
+					</p>
+				</div>
+				<div class="partner-items">
+					<div class="partner-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">
+						<div class="partner-image">
+							<img src="img/icon_1.svg" alt="">
+						</div>
+						<div class="partner-text">
+							25% Average <br> Conversion Rate
+						</div>
+					</div>
+					<div class="partner-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">
+						<div class="partner-image">
+							<img src="img/icon_2.svg" alt="">
+						</div>
+						<div class="partner-text">
+							No Country  <br> Restrictions
+						</div>
+					</div>
+					<div class="partner-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">
+						<div class="partner-image">
+							<img src="img/icon_3.svg" alt="">
+						</div>
+						<div class="partner-text">
+							Unbeatable $800 CPA <br> Per FTD
+						</div>
+					</div>
+					<div class="partner-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".4s">
+						<div class="partner-image">
+							<img src="img/icon_4.svg" alt="">
+						</div>
+						<div class="partner-text">
+							Weekly Payouts  <br>
+							Every Monday
+						</div>
+					</div>
+					<div class="partner-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".4s">
+						<div class="partner-image">
+							<img src="img/icon_5.svg" alt="">
+						</div>
+						<div class="partner-text">
+							1% Extra <br>
+							Rewards
+						</div>
+					</div>
+					<div class="partner-item wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".4s">
+						<div class="partner-image">
+							<img src="img/icon_6.svg" alt="">
+						</div>
+						<div class="partner-text">
+							Unique 60% FTD* + <br> 20% Lifetime Revenue <br> Share
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="brands">
+		<div class="wrapper">
+			<h2 class="brands-title title">Our well known <span>brands</span></h2>
+		</div>
+		<div class="brands-wrapper">
+				<div class="brands-margin"></div>
+				<div class="owl-carousel owl-theme">
+					<div class=brands-item>			
+						<img src="img/case_1@2x.png" alt="">
+						<div class="brands-body">
+							<h2 class="brands-subtitle">RACEOPTION.COM</h2>
+							<p class="brands-text">Raceoption is one of the most chosen brokers on the market, that uses our exclusive in-house tr…</p>
+						</div>
+					</div>
+					<div class=brands-item>			
+						<img src="img/case_2@2x.png" alt="">
+						<div class="brands-body">
+							<h2 class="brands-subtitle">VIDEFOREX.COM</h2>
+							<p class="brands-text">Videforex is a new generation broker with inhouse trading platform and video assistance …</p>
+						</div>
+					</div>
+					<div class=brands-item>			
+						<img src="img/case_3@2x.png" alt="">
+						<div class="brands-body">
+							<h2 class="brands-subtitle">BINARYCENT.COM</h2>
+							<p class="brands-text">Binarycent is an extremely affordable cryptocurrency broker with the minimum depos…</p>
+						</div>
+					</div>
+					<div class=brands-item>			
+						<img src="img/case_1@2x.png" alt="">
+						<div class="brands-body">
+							<h2 class="brands-subtitle">RACEOPTION.COM</h2>
+							<p class="brands-text">Raceoption is one of the most chosen brokers on the market, that uses our exclusive in-house tr…</p>
+						</div>
+					</div>
+					<div class=brands-item>			
+						<img src="img/case_2@2x.png" alt="">
+						<div class="brands-body">
+							<h2 class="brands-subtitle">VIDEFOREX.COM</h2>
+							<p class="brands-text">Videforex is a new generation broker with inhouse trading platform and video assistance …</p>
+						</div>
+					</div>
+					<div class=brands-item>			
+						<img src="img/case_3@2x.png" alt="">
+						<div class="brands-body">
+							<h2 class="brands-subtitle">BINARYCENT.COM</h2>
+							<p class="brands-text">Binarycent is an extremely affordable cryptocurrency broker with the minimum depos…</p>
+						</div>
+					</div>
+				</div>
+		</div>
+	</div>
+
+	<div class="signup wow fadeInUp" data-wow-duration="1.7s" data-wow-delay=".3s">
+		<div class="wrapper">
+			<div class="signup-wrapper">
+				<h2 class="signup-title title">Sign up now <br> And <span>Get $100</span> Bonus</h2>
+			</div>
+
+			<div class="signup-button-wrapper">
+				<a href="#" class="signup-button">Sign up now</a>
+			</div>
+		</div>
+	</div>
+
+	<footer class="footer">	
+		<div class="wrapper">
+			<div class="footer-items wow fadeInUp" data-wow-duration="1.7s" data-wow-delay=".3s">
+				<div class="footer-item">
+					<h3 class="footer-title">How to start?</h3>
+					<ul class="footer-list">
+						<li class="footer-li"><a href="#">Open an account</a></li>
+						<li class="footer-li"><a href="#">Account types</a></li>
+						<li class="footer-li"><a href="#">Funding methods</a></li>
+						<li class="footer-li"><a href="#">Withdrawal methods</a></li>
+						<li class="footer-li"><a href="#">FAQ</a></li>
+					</ul>
+				</div>
+				<div class="footer-item">
+					<h3 class="footer-title">Advantages</h3>
+					<ul class="footer-list">
+						<li class="footer-li"><a href="#">Our advantages</a></li>
+						<li class="footer-li"><a href="#">Bonuses</a></li>
+						<li class="footer-li"><a href="#">Contest</a></li>
+					</ul>
+				</div>
+				<div class="footer-item">
+					<h3 class="footer-title">About us</h3>
+					<ul class="footer-list">
+						<li class="footer-li"><a href="#">Contacts</a></li>
+						<li class="footer-li"><a href="#">Terms and conditions</a></li>
+						<li class="footer-li"><a href="#">Confidentiality Policy</a></li>
+						<li class="footer-li"><a href="#">Bonus rules</a></li>
+						<li class="footer-li"><a href="#">Risk statement</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="footer-text">
+				The financial services provided by this website carry a high level of risk and can result in the loss of all of your funds. You should never invest money that you cannot afford to lose. Please ensure you read our terms and conditions before making any operation in our trading platform. Under no circumstances the company has any liability to any person or entity for any loss or damage cause by operations on this website. Daxbase nor its agents or partners are not registered and do not provide any services on the USA territory.
+			</div>
+			<div class="footer-bottom wow fadeInUp" data-wow-duration="1.7s" data-wow-delay=".3s">
+				<div class="footer-copyright">© 2019 Finance Group Corp.</div>
+				<div class="footer-social">
+					<a href="#">
+						<?xml version="1.0" encoding="UTF-8"?>
+						<svg width="8px" height="16px" viewBox="0 0 8 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+							<g id="current" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+								<g id="DaxBase-07" transform="translate(-1159.000000, -4087.000000)" fill="#FFFFFF" fill-rule="nonzero">
+									<g id="Group" transform="translate(380.000000, 3585.000000)">
+										<g id="social-links" transform="translate(779.000000, 498.000000)">
+											<path d="M6.77938284,12.0276783 L4.68417699,12.0276783 L4.68417699,19.7035414 L1.50976222,19.7035414 L1.50976222,12.0276783 L-1.24344979e-14,12.0276783 L-1.24344979e-14,9.33007464 L1.50976222,9.33007464 L1.50976222,7.58441862 C1.50976222,6.33608619 2.10274105,4.3813282 4.71243401,4.3813282 L7.06383686,4.39116583 L7.06383686,7.00964987 L5.35774067,7.00964987 C5.0778915,7.00964987 4.6843863,7.1494698 4.6843863,7.74496037 L4.6843863,9.33258638 L7.05672028,9.33258638 L6.77938284,12.0276783 Z" id="facebook"></path>
+										</g>
+									</g>
+								</g>
+							</g>
+						</svg>
+						Facebook
+					</a>
+					<a href="#">
+						<?xml version="1.0" encoding="UTF-8"?>
+						<svg width="15px" height="16px" viewBox="0 0 15 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+							<g id="current" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+								<g id="DaxBase-07" transform="translate(-1306.000000, -4087.000000)" fill="#FFFFFF" fill-rule="nonzero">
+									<g id="Group" transform="translate(380.000000, 3585.000000)">
+										<g id="social-links" transform="translate(779.000000, 498.000000)">
+											<path d="M158.258698,6.36834773 L151.125272,6.36834773 C149.986675,6.36834773 149.060333,7.29469055 149.060333,8.43328694 L149.060333,15.5667133 C149.060333,16.7053097 149.986675,17.6319191 151.125272,17.6319191 L158.258698,17.6319191 C159.397295,17.6319191 160.323904,16.7055763 160.323904,15.5667133 L160.323904,8.43328694 C160.323904,7.29469055 159.397561,6.36834773 158.258698,6.36834773 Z M154.691985,15.7080379 C152.647578,15.7080379 150.984214,14.0446739 150.984214,12.0000001 C150.984214,9.95559297 152.647578,8.29222898 154.691985,8.29222898 C156.736659,8.29222898 158.400023,9.95559297 158.400023,12.0000001 C158.400023,14.0444073 156.736392,15.7080379 154.691985,15.7080379 Z M158.519215,9.05884832 C158.035245,9.05884832 157.64167,8.66527262 157.64167,8.18156914 C157.64167,7.69786566 158.035245,7.30428996 158.519215,7.30428996 C159.002919,7.30428996 159.396495,7.69786566 159.396495,8.18156914 C159.396495,8.66527262 159.002919,9.05884832 158.519215,9.05884832 Z M161.890474,15.5667133 C161.890474,17.569523 160.261508,19.1984891 158.258698,19.1984891 L151.125272,19.1984891 C149.122729,19.1984891 147.493496,17.569523 147.493496,15.5667133 L147.493496,8.43328694 C147.493496,6.43074388 149.122729,4.80151111 151.125272,4.80151111 L158.258698,4.80151111 C160.261508,4.80151111 161.890474,6.43074388 161.890474,8.43328694 L161.890474,15.5667133 Z M154.691985,9.8590656 C153.511791,9.8590656 152.550784,10.8195396 152.550784,11.9997335 C152.550784,13.1804606 153.511791,14.1412013 154.691985,14.1412013 C155.872712,14.1412013 156.83292,13.1804606 156.83292,11.9997335 C156.83292,10.8198063 155.872446,9.8590656 154.691985,9.8590656 Z" id="instagram"></path>
+										</g>
+									</g>
+								</g>
+							</g>
+						</svg>
+						Instagram
+					</a>
+					<a href="#">
+						<?xml version="1.0" encoding="UTF-8"?>
+						<svg width="18px" height="14px" viewBox="0 0 18 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+							<g id="current" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+								<g id="DaxBase-07" transform="translate(-1466.000000, -4090.000000)" fill="#F1F2F2" fill-rule="nonzero">
+									<g id="Group" transform="translate(380.000000, 3585.000000)">
+										<g id="social-links" transform="translate(779.000000, 498.000000)">
+											<path d="M322.734361,9.15003671 C323.454594,8.72525275 324.007319,8.05312624 324.268205,7.25092723 C323.594271,7.64447331 322.847507,7.92996705 322.053403,8.08385202 C321.417184,7.41684647 320.510715,7 319.506967,7 C317.581143,7 316.019207,8.53756942 316.019207,10.4333503 C316.019207,10.7024569 316.05016,10.9643942 316.109984,11.2158336 C313.211364,11.0727026 310.641258,9.70591735 308.920918,7.62808623 C308.620755,8.13506166 308.448565,8.72525275 308.448565,9.35436317 C308.448565,10.5452433 309.064756,11.5965772 310.000097,12.2121171 C309.428644,12.1944498 308.890485,12.0400527 308.420474,11.7822122 C308.420214,11.7968069 308.420214,11.8114017 308.420214,11.8257404 C308.420214,13.4892855 309.622943,14.8768107 311.218173,15.192006 C310.925814,15.2708689 310.617068,15.3126047 310.299479,15.3126047 C310.074227,15.3126047 309.855998,15.2913527 309.643232,15.2514092 C310.086972,16.6151219 311.374757,17.6078208 312.901318,17.63573 C311.707432,18.5567354 310.20376,19.1054467 308.569255,19.1054467 C308.28834,19.1054467 308.010027,19.0893156 307.737696,19.0573096 C309.280384,20.0318291 311.11413,20.6 313.083652,20.6 C319.498904,20.6 323.007212,15.3684232 323.007212,10.8309931 C323.007212,10.6822291 323.00383,10.5339772 322.997067,10.3870056 C323.679065,9.90307446 324.270286,9.29854467 324.737696,8.61003106 C324.112402,8.88297844 323.439768,9.06758919 322.734361,9.15003671 Z" id="twitter"></path>
+										</g>
+									</g>
+								</g>
+							</g>
+						</svg>
+						Twitter
+					</a>
+				</div>
+			</div>
+		</div>
 	</footer>
 
 	<!-- You can add scripts to gulpfile.js -->
+	<script src="js/wow.min.js"></script>
 	<script src="js/scripts.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
 </body>
 </html>
