--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Title</title>
+	<title>Finministry</title>
 	<meta name="description" content="Description your project">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
@@ -205,48 +205,47 @@
 
 	<div class="brands">
 		<div class="wrapper">
-			<h2 class="brands-title title">Our well known <span>brands</span></h2>
+			<h2 class="brands-title title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">Our well known <span>brands</span></h2>
 		</div>
 		<div class="brands-wrapper">
-				<div class="brands-margin"></div>
-				<div class="owl-carousel owl-theme">
+				<div class="owl-carousel owl-theme wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s">
 					<div class=brands-item>			
-						<img src="img/case_1@2x.png" alt="">
+						<img src="img/case-1.png" alt="">
 						<div class="brands-body">
 							<h2 class="brands-subtitle">RACEOPTION.COM</h2>
 							<p class="brands-text">Raceoption is one of the most chosen brokers on the market, that uses our exclusive in-house tr…</p>
 						</div>
 					</div>
 					<div class=brands-item>			
-						<img src="img/case_2@2x.png" alt="">
+						<img src="img/case-2.png" alt="">
 						<div class="brands-body">
 							<h2 class="brands-subtitle">VIDEFOREX.COM</h2>
 							<p class="brands-text">Videforex is a new generation broker with inhouse trading platform and video assistance …</p>
 						</div>
 					</div>
 					<div class=brands-item>			
-						<img src="img/case_3@2x.png" alt="">
+						<img src="img/case-3.png" alt="">
 						<div class="brands-body">
 							<h2 class="brands-subtitle">BINARYCENT.COM</h2>
 							<p class="brands-text">Binarycent is an extremely affordable cryptocurrency broker with the minimum depos…</p>
 						</div>
 					</div>
 					<div class=brands-item>			
-						<img src="img/case_1@2x.png" alt="">
+						<img src="img/case-1.png" alt="">
 						<div class="brands-body">
 							<h2 class="brands-subtitle">RACEOPTION.COM</h2>
 							<p class="brands-text">Raceoption is one of the most chosen brokers on the market, that uses our exclusive in-house tr…</p>
 						</div>
 					</div>
 					<div class=brands-item>			
-						<img src="img/case_2@2x.png" alt="">
+						<img src="img/case-2.png" alt="">
 						<div class="brands-body">
 							<h2 class="brands-subtitle">VIDEFOREX.COM</h2>
 							<p class="brands-text">Videforex is a new generation broker with inhouse trading platform and video assistance …</p>
 						</div>
 					</div>
 					<div class=brands-item>			
-						<img src="img/case_3@2x.png" alt="">
+						<img src="img/case-3.png" alt="">
 						<div class="brands-body">
 							<h2 class="brands-subtitle">BINARYCENT.COM</h2>
 							<p class="brands-text">Binarycent is an extremely affordable cryptocurrency broker with the minimum depos…</p>
