add spin value js

--- a/project/index.html
+++ b/project/index.html
@@ -258,7 +258,7 @@
 	<div class="signup wow fadeInUp" data-wow-duration="1.7s" data-wow-delay=".3s">
 		<div class="wrapper">
 			<div class="signup-wrapper">
-				<h2 class="signup-title title">Sign up now <br> And <span>Get $100</span> Bonus</h2>
+				<h2 class="signup-title title">Sign up now <br> And <span>Get $<strong id="lines">9<strong></span> Bonus</h2>
 			</div>
 
 			<div class="signup-button-wrapper">
